--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "https://github.com/Ivshti/video-name-parser"
   },
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "keywords": [
     "parsing",
     "video",
